tests/integration/errors/reserved_keyword.rsg
// TEST: compile_error
// EXPECT-ERROR: 'async' is a reserved keyword

fn main() {
    async := 42
}
